--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "mongoose": "^6.7.3",
+    "mongoose-type-email": "^1.1.2",
     "path": "^0.12.7"
   }
 }
