--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "MERN project for Interview Scheduler",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "author": "Pranjal Gaur",
   "license": "ISC",
@@ -16,6 +19,10 @@
     "express-validator": "^6.14.2",
     "mongoose": "^6.7.3",
     "mongoose-type-email": "^1.1.2",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
