--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^6.7.3",
     "mongoose-type-email": "^1.1.2",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
