--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.3",
     "mongoose-type-email": "^1.1.2",
     "nodemon": "^2.0.20",
